- Der Platzhalter [[ACCESS_USER_PRIMARY_GROUP]] gibt den Namen der primären
  Benutzergruppe aus.
- Die Registrierungsmaske kann optional um ein CAPTCHA erweitert werden.
- Die Registrierungsmaske kann optional um die Aufforderung der AGB's zu
  Akzeptieren erweitert werden.
- Mit dem neuen Platzhalter [[USER_COUNT]] kann die Anzahl Mitglieder
  in der index.html des Layouts ausgegeben werden.

Korrespondierende Mehrsprachigkeit
- Auch bei mehreren Sprachen haben alle Seiten die gleiche ID
- Editeren einer Seite in mehreren Sprachen auf einmal
- Vorschau-Funktion

Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.
- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.
- Kopierfunktion für Downloads.
- Die effektiven Zugriffsberechtigungen einer Benutzergruppe oder Benutzers
  können angezeigt werden.
- Neuer Platzhalter DOWNLOADS_FILE_MD5 für die Ausgabe der MD5 Summe eines
  Downloads.
- Der Block "Verwandte Downloads" (downloads_related_file_list) unterstützt
  die gleichen Platzhalter wie bei der Detailseite eines Downloads.
- Für die Erfassung der Beschreibung eines Downloads oder Kategorie steht ein
  WYSIWYG-Editor zur Verfügung.

Modul: Dokumenten System
- Uhrzeit- (nicht nur Datums-) gesteuerte Veröffentlichung von Dokumenten.

Modul: Shop
- Bilder können von einem Produkt wieder entfernt werden.

FCKEditor
- Neue Version 2.6.4.1

****************************************
* Behobene Fehler **********************
****************************************
Allgemein:
- Die im Benutzerprofil definierte bevorzugte Frontend-Sprache wird nach der
  Authentifizierung im Frontend nur dann geladen, sofern der Benutzer im